Resposiveness and homepage optimization

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -7,14 +7,18 @@
             <video id="background-video" autoplay loop muted>
                 <source src="/assets/back4.mp4" type="video/mp4">
         </video>
-        <div class="container mx-auto px-2 margin-push">
-            <h1 class="background-video-h1 header-hero">Digitally empowering how we <span class="span">work</span>, learn and live .</h1>
-            <h2 class="background-video-h2 header-p">We are Proscene, reshaping how people interact with the world. We
-                deliver outstanding audio and video experiences in any space. Our Audio and Video solutions enhance your
-                experiences whether you're working, learning, or at home..</h2>
-            <p class="text-left pt-3">
-                <a routerLink="/contact-us" class="demo-button ml-2">Connect with us!</a>
-            </p>
+        <div class="container1">
+            <div class="word-wrapper">
+                <h1 class="background-video-h1 header-hero">Digitally empowering how we <span class="span">work</span>, learn and live .</h1>
+                <div>
+                    <h2 class="background-video-h2 header-p">We are Proscene, reshaping how people interact with the world. We
+                        deliver outstanding audio and video experiences in any space. Our Audio and Video solutions enhance your
+                        experiences whether you're working, learning, or at home..</h2>
+                    <p class="text-left pt-3">
+                        <a routerLink="/contact-us" class="demo-button">Connect with us!</a>
+                    </p>
+                </div>
+            </div>
         </div>
         
         <div class="solutions">
@@ -212,7 +216,7 @@
                     <a class="demo-button mt-6 mb-6 pb-2" style="padding-bottom: 7px;" routerLink="/blog">Discover More</a>
                 </div>
         </div>
-        <div style="background-color: #f4f4f4d5;" class="pb-12">
+        <div class="">
             <app-contactform></app-contactform>
         </div>
         <app-footer></app-footer>
