--- a/src/app/modules/shared/contactform/contactform.component.html
+++ b/src/app/modules/shared/contactform/contactform.component.html
@@ -3,8 +3,8 @@
   <div>
     <h2 class="sub-container-h2 pl-9 pb-9" style="color: white;">Talk to a sales expert</h2>
     <div class="login-main-container">
-        <div class="form-container">
-          <form class="form" [formGroup]="form" (ngSubmit)="send()">
+        <div class="form-container mb-3">
+          <form class="form " [formGroup]="form" (ngSubmit)="send()">
               <label for="">Your Name</label>
               <input type="text" formControlName="from_name" id="Yourname" />
               <div
@@ -72,9 +72,9 @@
       </div>
   </div>
     <div class="sub-container">
-      <h2 class="sub-container-h2">Get the resources you need</h2>
+      <h2 class="sub-container-h2 pl-9">Get the resources you need</h2>
       <section>
-        <div class="flex pt-7">
+        <div class="flex pl-3 pt-7">
           <div>
             <ng-icon class="icons-1" name="heroPhoneArrowUpRight"></ng-icon>
           </div>
@@ -85,7 +85,7 @@
             </div>
           </a>
         </div>
-        <div class="flex pt-7">
+        <div class="flex pt-7 pl-3">
           <div>
             <ng-icon class="icons" name="heroCursorArrowRays"></ng-icon>
           </div>
@@ -96,7 +96,7 @@
             </div>
           </a>
         </div>
-        <div class="flex pt-7">
+        <div class="flex pt-7 pl-3">
           <div>
             <ng-icon class="icons" name="heroMapPin"></ng-icon>
           </div>
@@ -107,7 +107,7 @@
             </div>
           </a>
         </div>
-        <div class="flex pt-7">
+        <div class="flex pt-7 pl-3">
           <div>
             <ng-icon class="icons" name="heroUserGroup"></ng-icon>
           </div>
