--- a/src/app/modules/shared/contactform/contactform.component.scss
+++ b/src/app/modules/shared/contactform/contactform.component.scss
@@ -3,7 +3,7 @@ $smallest-h2:clamp(1.2656rem, 1.0692rem + 0.9822vw, 1.99rem);
 $smallest-h3: clamp(1rem, 1.0661rem + 0.5695vw, 1.65rem);
 main{
     width: 100%;
-    background-color: $the-blue;
+    background-color: #084C61;
     padding-block: 3rem;
 }
 .login-main-container{
