--- a/src/app/modules/shared/footer/footer.component.scss
+++ b/src/app/modules/shared/footer/footer.component.scss
@@ -56,6 +56,8 @@ $gap-small:1em;
         flex-direction: row;
         justify-content: space-between;
         padding-block: 3em;
+        margin-inline: 2em;
+        margin-top: 2em;
     }
     .bottom-links{
         display: flex;
