--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -2,8 +2,12 @@
 img{
     border-radius: 10px;
 }
-.container{
+.word-wrapper{
+    padding-inline: .5rem;
+}
+.container1{
     height: 100vh !important;
+    background-color: rgba(0, 0, 0, 0.486);
 }
 .body-outer{
     width: 100%;
@@ -28,15 +32,17 @@ img{
     color: white;
     text-align: left;
     padding-bottom: .5rem;
-    padding-inline: 1rem;
  }
  
  .header-hero{
     color: $white;
     padding-top: 12vh;
     font-weight: 700;
-    font-size: clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
+    font-size: clamp(2.5rem, 10vw + 1rem, 3rem);
     text-transform: capitalize;
+}
+.header-p{
+    font-size: clamp(1rem, 0.9661rem + 0.5695vw, 1.2rem)
 }
 .icons{
     font-size: 50px;
@@ -100,11 +106,13 @@ img{
     padding-block: 2em;
     max-width: 800px;
     aspect-ratio: 1; 
+    padding-inline: 1em;
 }
 .use{
     background-color: #084C61; 
     color: white;
     border-radius: 10px;
+    margin-inline: .5rem;
 }
 
 @media (min-width:35em) and (max-width:59em) {
@@ -128,6 +136,9 @@ img{
     
 }
 @media (min-width:60em) {
+    .word-wrapper{
+        margin-inline: 5vw;
+    }
     .use{
         margin-inline: 2rem;
     }
@@ -138,6 +149,7 @@ img{
     .header-p{
         width: 50%;
         padding-bottom: 1em;
+        font-size: clamp(1.1rem, 0.9661rem + 0.5695vw, 1.05rem)
     }
     .card-container{
         display: flex;
@@ -168,5 +180,10 @@ img{
     }
     .solutions{
         padding-top: 2rem;
+    }
+}
+@media (min-width:1620px) {
+    .header-hero{
+        padding-top: 35vh;
     }
 }
