--- a/src/app/modules/shared/navbar/navbar.component.scss
+++ b/src/app/modules/shared/navbar/navbar.component.scss
@@ -56,10 +56,10 @@
 
   } 
   /* Show the dropdown menu on hover */
-//   .dropdown:hover .dropdown-content {
-//     display: block;
-//     z-index: 9950;
-// } 
+  .dropdown:hover .dropdown-content {
+    display: block;
+    z-index: 9950;
+} 
 .space-around{
     display: flex;
     justify-content: space-between;
